--- a/www/views/home.html
+++ b/www/views/home.html
@@ -3,7 +3,7 @@
 <div class="jumbotron">
     <h1>{{title}}</h1>
     <p class="lead">
-        AngularJS + RequireJS: The Proper and Easier Way
+        AngularJS + RequireJS: The Proper and Easier Way !!!!
     </p>
 </div>
 
